--- a/pom.xml
+++ b/pom.xml
@@ -295,8 +295,8 @@
 			</dependency>
 			<dependency>
 				<groupId>org.antlr</groupId>
-				<artifactId>stringtemplate</artifactId>
-				<version>4.0.2</version>
+				<artifactId>ST4</artifactId>
+				<version>4.0.8</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
@@ -383,7 +383,7 @@
 			<dependency>
 				<groupId>org.antlr</groupId>
 				<artifactId>antlr4-runtime</artifactId>
-				<version>4.5.3</version>
+				<version>4.6</version>
 			</dependency>
 			<dependency>
 				<groupId>com.graphql-java</groupId>
@@ -434,17 +434,6 @@
 				<groupId>org.mockito</groupId>
 				<artifactId>mockito-all</artifactId>
 				<version>1.9.5</version>
-			</dependency>
-			<dependency>
-				<groupId>org.antlr</groupId>
-				<artifactId>antlr-runtime</artifactId>
-				<version>3.5.2</version>
-				<exclusions>
-					<exclusion>
-						<groupId>org.antlr</groupId>
-						<artifactId>stringtemplate</artifactId>
-					</exclusion>
-				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>com.github.dirkraft.dropwizard</groupId>
@@ -596,7 +585,7 @@
 				<plugin>
 					<groupId>org.antlr</groupId>
 					<artifactId>antlr4-maven-plugin</artifactId>
-					<version>4.5.3</version>
+					<version>4.6</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
