Add bootstraping/loading/clear to phantasm application.
Fix transactional usage.  Geebus.  Fix edge type resolver - there can
only be 1!

--- a/phantasm-at-rest/src/test/resources/demo.yml
+++ b/phantasm-at-rest/src/test/resources/demo.yml
@@ -28,4 +28,12 @@ assets:
     uri: /api/meta/
     path: /workspace-explorer/meta
     index: index.html
+    
+clear: true
+
+workspaces:
+  - /some_more_things_wsp.json
+
+snapshots:
+  - /some_more_things.json
         
