Vastly simplify Phantasam application

--- a/phantasm-at-rest/pom.xml
+++ b/phantasm-at-rest/pom.xml
@@ -9,6 +9,11 @@
 	<artifactId>phantasm-at-rest</artifactId>
 	<name>Phantasm At REST</name>
 	<description>A rest API for the Ultrastructure Phantasms</description>
+
+	<properties>
+		<main.class>com.chiralbehaviors.CoRE.phantasm.service.PhantasmApplication</main.class>
+	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>graphql-java-annotations</groupId>
@@ -182,6 +187,14 @@
 					</classpathDependencyExcludes>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <configuration>
+                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                    <shadedClassifierName>phat</shadedClassifierName>
+                </configuration>
+            </plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
