add coverage to readme

--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,7 @@
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>navi</artifactId>
+				<artifactId>handi-navi</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
