attempt at using embedded postgresql in testing and dev

--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
 		<module>acm-95-ontology</module>
 		<module>handi-navi</module>
 		<module>ide</module>
+		<module>postgresql-testing</module>
 	</modules>
 
 	<dependencyManagement>
