--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -7,8 +7,12 @@
 		<version>2.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>ide</artifactId>
-	<name>UaaS App</name>
+	<name>UaaS IDE</name>
 	<description>A universal JavaFX IDE and runtime UI for UaaS</description>
+
+	<properties>
+		<main.class>com.chiralbehaviors.layout.toy.SinglePageApp</main.class>
+	</properties>
 
 	<dependencies>
 		<dependency>
@@ -33,35 +37,6 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.zenjava</groupId>
-				<artifactId>javafx-maven-plugin</artifactId> 
-				<configuration>
-					<mainClass>com.chiralbehaviors.layout.toy.SinglePageApp</mainClass>
-					<verbose>true</verbose>
-					<vendor>Chiral Behaviors LLC</vendor>
-					<j2seVersion>1.8+</j2seVersion>
-				</configuration>
-				<executions>
-					<execution>
-						<!-- required before build-web -->
-						<id>create-jfxjar</id>
-						<phase>package</phase>
-						<goals>
-							<goal>build-jar</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>create-web</id>
-						<phase>package</phase>
-						<goals>
-							<goal>build-web</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			
-			 
-			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
 				<executions>
@@ -82,7 +57,6 @@
 			<plugin>
 				<groupId>${project.groupId}</groupId>
 				<artifactId>phantasm-plugin</artifactId>
-				<version>${project.version}</version>
 				<executions>
 					<execution>
 						<id>app-phantasms</id>
@@ -100,10 +74,19 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<configuration>
+					<shadedArtifactAttached>true</shadedArtifactAttached>
+					<shadedClassifierName>phat</shadedClassifierName>
+				</configuration>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
