--- a/handi-navi/pom.xml
+++ b/handi-navi/pom.xml
@@ -24,6 +24,10 @@
 			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>phantasm-at-rest</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.controlsfx</groupId>
+			<artifactId>controlsfx</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
