--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>sh.tak.appbundler</groupId>
+				<artifactId>appbundle-maven-plugin</artifactId>
+				<version>1.2.0</version>
+			</dependency>
+			<dependency>
 				<groupId>org.controlsfx</groupId>
 				<artifactId>controlsfx</artifactId>
 				<version>8.40.12</version>
