Massive refactoring to allow phantasm.java generation of imported facets

--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -69,6 +69,9 @@
 								<resource>${basedir}/src/main/resources/single-page.wsp</resource>
 								<outputDirectory>${project.build.directory}/generated-test-sources/phantasm</outputDirectory>
 								<packageName>com.chiralbehaviors.CoRE.singlePgApp</packageName>
+								<namespacePackages>
+									<kernel>com.chiralbehaviors.CoRE.kernel.phantasm</kernel>
+								</namespacePackages>
 							</generator>
 						</configuration>
 					</execution>
