--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -152,6 +152,9 @@
 								<resource>/thing.wsp</resource>
 								<outputDirectory>${project.build.directory}/generated-test-sources/phantasm</outputDirectory>
 								<packageName>com.chiralbehaviors.CoRE.phantasm.test</packageName>
+								<namespacePackages>
+									<kernel>com.chiralbehaviors.CoRE.kernel.phantasm</kernel>
+								</namespacePackages>
 							</generator>
 						</configuration>
 					</execution>
