--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
 		<module>test-plugin</module>
 		<module>acm-95-ontology</module>
 		<module>handi-navi</module>
-		<module>ide</module>
+		<module>universal</module>
 		<module>postgresql-testing</module>
 	</modules>
 
@@ -204,7 +204,7 @@
 			</dependency>
 			<dependency>
 				<groupId>${project.groupId}</groupId>
-				<artifactId>ide</artifactId>
+				<artifactId>universal</artifactId>
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
