Refactor resources, work on parsing app structure from query

--- a/handi-navi/src/main/resources/default.yml
+++ b/handi-navi/src/main/resources/default.yml
@@ -12,4 +12,4 @@ logging:
         graphql: WARN
 
 workspaces:
-  - /single-page.1.json
+  - /com/chiralbehaviors/CoRE/universal/single-page.1.json
