--- a/universal/pom.xml
+++ b/universal/pom.xml
@@ -47,6 +47,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.chiralbehaviors.CoRE</groupId>
+			<artifactId>phantasm-at-rest</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.chiralbehaviors.CoRE</groupId>
 			<artifactId>animations</artifactId>
 			<type>test-jar</type>
 			<scope>test</scope>
